Remove column header text

--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -17,7 +17,7 @@
                             <th>Deploy User</th>
                             <th>Instances</th>
                             <th>Daemon</th>
-                            <th data-sort="false">JSON</th>
+                            <th data-sort="false"></th>
                         </tr>
                     </thead>
                     <tbody>
