Add link to mesos master logs from task history page

--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -34,6 +34,15 @@
         <div class="page-loader centered"></div>
     {{/if}}
     <div class="page-header">
+        <h1>Logs</h1>
+    </div>
+    <div class="row-fluid">
+        <div class="span12">
+            <p><a href="{{ taskHistory.mesosMasterLogsLink }}" target="_blank">View logs on Mesos Master</a></p>
+            <pre><center>COMING SOON</center></pre>
+        </div>
+    </div>
+    <div class="page-header">
         <h1>JSON</h1>
     </div>
     <div class="row-fluid">
