--- a/SingularityUI/app/views/templates/tasksCleaning.hbs
+++ b/SingularityUI/app/views/templates/tasksCleaning.hbs
@@ -10,11 +10,7 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Started</th>
-                        <th>Host</th>
-                        <th>Rack</th>
-                        <th>CPUs</th>
-                        <th>Memory</th>
+                        <th>Cleanup type</th>
                         <th data-sort="false"></th>
                     </tr>
                 </thead>
@@ -22,16 +18,8 @@
                     {{#eachWithFn tasks}}
                         <tr data-task-id="{{ id }}">
                             <td><a title="{{ id }}" href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></td>
-                            <td data-value="{{ startedAt }}"><span title="{{ startedAt }}">{{ startedAtHuman }}</span></td>
-                            <td>{{ host }}</td>
-                            <td>{{ rack }}</td>
-                            <td>{{ resources.cpus }}</td>
-                            <td data-value="{{ resources.memoryMb }}">{{ memoryHuman }}</td>
-                            <td>
-                                <a data-task-id="{{ id }}" class="dont-route view-json">JSON</a>
-                                &nbsp;&nbsp;
-                                <a data-task-id="{{ id }}" class="dont-route" data-action="remove" data-url="{{ url }}">Remove</a>
-                            </td>
+                            <td>{{ cleanupTypeHuman }}</span></td>
+                            <td><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></td>
                         </tr>
                     {{/eachWithFn}}
                 </tbody>
