Upgrade sortable to 0.4.1
From:
https://github.com/HubSpot/sortable/blob/e235838afadf2fc27a01b9b50a1b0ed83a2526f8/js/sortable.min.js

--- a/SingularityUI/app/styles/sortable.styl
+++ b/SingularityUI/app/styles/sortable.styl
@@ -1,4 +1,4 @@
-table[data-sortable="true"]
+table[data-sortable]
     border-collapse collapse
     border-spacing 0
     background rgba(0, 0, 0, .05)
@@ -6,42 +6,50 @@ table[data-sortable="true"]
     tbody td
         border-top 1px solid rgba(0, 0, 0, .05)
 
+    th
+        vertical-align bottom
+        font-weight bold
+
     th, td
         text-align left
         padding 10px
 
-    th:not([data-sort="false"])
+    th:not([data-sortable="false"])
         -webkit-user-select none
+        -moz-user-select none
+        -ms-user-select none
+        -o-user-select none
+        user-select none
+        -webkit-tap-highlight-color rgba(0, 0, 0, 0)
+        -webkit-touch-callout none
         cursor pointer
-        position relative
 
-    th[data-sorted="true"]
-        background rgba(0, 0, 0, .05)
+    th
 
         &:after
             content ""
+            visibility hidden
             display inline-block
-            height 0
-            width 30px
-
-        &:before
-            content ""
-            display inline-block
+            vertical-align inherit
             height 0
             width 0
             border-width 5px
             border-style solid
             border-color transparent
-            position absolute
-            margin auto
-            right 10px
+            margin-right 1px
+            margin-left 10px
+            float right
 
-        &[data-sorted-direction="descending"]:before
+        &[data-sorted="true"]
+            background rgba(0, 0, 0, .05)
+
+            &:after
+                visibility visible
+
+        &[data-sorted-direction="descending"]:after
             border-top-color inherit
-            top 4px
-            bottom 0
+            margin-top 8px
 
-        &[data-sorted-direction="ascending"]:before
+        &[data-sorted-direction="ascending"]:after
             border-bottom-color inherit
-            top 0
-            bottom 4px
+            margin-top 8px - 5px
