--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -7,7 +7,7 @@
         <h1>Hosts</h1>
     </div>
     <div class="row-fluid">
-        <table class="table" data-sortable="true">
+        <table class="table" data-sortable>
             <thead>
                 <tr>
                     <th>Hostname</th>
