--- a/SingularityUI/app/views/templates/racks.hbs
+++ b/SingularityUI/app/views/templates/racks.hbs
@@ -9,7 +9,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if racksActive.length}}
-                <table class="table" data-sortable="true">
+                <table class="table" data-sortable>
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -39,7 +39,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if racksDead.length}}
-                <table class="table" data-sortable="true">
+                <table class="table" data-sortable>
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -69,7 +69,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if racksDecomissioning.length}}
-                <table class="table" data-sortable="true">
+                <table class="table" data-sortable>
                     <thead>
                         <tr>
                             <th>ID</th>
