--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -10,14 +10,14 @@
     {{#if requestTasksActive}}
         <div class="row-fluid">
             <div class="span12">
-                <table class="table" data-sortable="true">
+                <table class="table" data-sortable>
                     <thead>
                         <tr>
                             <th>Name</th>
                             <th>Status</th>
                             <th>Created</th>
                             <th>Updated</th>
-                            <th data-sort="false">JSON</th>
+                            <th data-sortable="false">JSON</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -48,12 +48,12 @@
     {{#if requestTasksScheduled}}
         <div class="row-fluid">
             <div class="span12">
-                <table class="table" data-sortable="true">
+                <table class="table" data-sortable>
                     <thead>
                         <tr>
                             <th>Name</th>
                             <th>Next run</th>
-                            <th data-sort="false">JSON</th>
+                            <th data-sortable="false">JSON</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -82,7 +82,7 @@
     {{#if requestTasksHistorical}}
         <div class="row-fluid">
             <div class="span12">
-                <table class="table" data-sortable="true">
+                <table class="table" data-sortable>
                     <thead>
                         <tr>
                             <th>Name</th>
