--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -9,7 +9,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if requests.length}}
-                <table class="table" data-sortable="true">
+                <table class="table" data-sortable>
                     <thead>
                         <tr>
                             <th>Name</th>
@@ -17,7 +17,7 @@
                             <th>Deploy User</th>
                             <th>Instances</th>
                             <th>Daemon</th>
-                            <th data-sort="false"></th>
+                            <th data-sortable="false"></th>
                         </tr>
                     </thead>
                     <tbody>
