--- a/SingularityUI/app/views/templates/slaves.hbs
+++ b/SingularityUI/app/views/templates/slaves.hbs
@@ -9,7 +9,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if slavesActive.length}}
-                <table class="table" data-sortable="true">
+                <table class="table" data-sortable>
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -43,7 +43,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if slavesDead.length}}
-                <table class="table" data-sortable="true">
+                <table class="table" data-sortable>
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -77,7 +77,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if slavesDecomissioning.length}}
-                <table class="table" data-sortable="true">
+                <table class="table" data-sortable>
                     <thead>
                         <tr>
                             <th>ID</th>
