--- a/SingularityUI/app/views/templates/webhooks.hbs
+++ b/SingularityUI/app/views/templates/webhooks.hbs
@@ -5,11 +5,11 @@
 <section>
     <div class="row-fluid">
         <div class="span12">
-            <table class="table" data-sortable="true">
+            <table class="table" data-sortable>
                 <thead>
                     <tr>
                         <th>Webhook</th>
-                        <th data-sort="false"></th>
+                        <th data-sortable="false"></th>
                     </tr>
                 </thead>
                 <tbody>
