--- a/SingularityUI/app/views/templates/tasksActive.hbs
+++ b/SingularityUI/app/views/templates/tasksActive.hbs
@@ -6,7 +6,7 @@
     <input type="search" placeholder="Filter tasks..." required />
     <div class="row-fluid">
         <div class="span12">
-            <table class="table" data-sortable="true">
+            <table class="table" data-sortable>
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -15,7 +15,7 @@
                         <th>Rack</th>
                         <th>CPUs</th>
                         <th>Memory</th>
-                        <th data-sort="false"></th>
+                        <th data-sortable="false"></th>
                     </tr>
                 </thead>
                 <tbody>
