--- a/SingularityUI/app/views/templates/tasksCleaning.hbs
+++ b/SingularityUI/app/views/templates/tasksCleaning.hbs
@@ -6,12 +6,12 @@
     <input type="search" placeholder="Filter tasks..." required />
     <div class="row-fluid">
         <div class="span12">
-            <table class="table" data-sortable="true">
+            <table class="table" data-sortable>
                 <thead>
                     <tr>
                         <th>Name</th>
                         <th>Cleanup type</th>
-                        <th data-sort="false"></th>
+                        <th data-sortable="false"></th>
                     </tr>
                 </thead>
                 <tbody>
