--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -34,27 +34,25 @@
         <div class="page-loader centered"></div>
     {{/if}}
     <div class="page-header">
-        <h1>Log Files</h1>
+        <h1>Files</h1>
     </div>
     <div class="row-fluid">
         <div class="span12">
-            <p><a href="{{ taskHistory.mesosMasterLogsLink }}" target="_blank">View logs on Mesos Master</a></p>
+            <p><a href="{{ taskHistory.mesosMasterLogsLink }}" target="_blank">View on Mesos Master</a></p>
             <table class="table" data-sortable>
                 <thead>
                     <tr>
                         <th>Filename</th>
                         <th>Size</th>
                         <th>Last modified</th>
-                        <th data-sortable="false"></th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#eachWithFn taskLogFiles}}
                         <tr>
-                            <td><a href="{{ ../taskHistory.mesosMasterLogsLink }}" target="_blank">{{ shortPath }}</a></td>
-                            <td data-value="{{ size }}">{{ size }}B</td>
+                            <td>{{#if isDirectory}}<a href="/singularity/task/{{ taskId }}/files{{ relPath }}" data-route="/task/{{ taskId }}/files{{ relPath }}">{{ shortPath }}</a>{{else}}<a href="{{ downloadLink }}" target="_blank">{{ shortPath }}</a>{{/if}}</td>
+                            <td data-value="{{ size }}">{{ sizeHuman }}</td>
                             <td data-value="{{ mtime }}"><span title="{{ mtime }}">{{ mtimeHuman }}</span></td>
-                            <td><a href="{{ downloadLink }}" target="_blank">Download</span></td>
                         </tr>
                     {{/eachWithFn}}
                 </tbody>
