Better display of task files/folder

--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -42,17 +42,27 @@
             <table class="table" data-sortable>
                 <thead>
                     <tr>
-                        <th>Filename</th>
+                        <th>Name</th>
                         <th>Size</th>
                         <th>Last modified</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#eachWithFn taskLogFiles}}
                         <tr>
-                            <td>{{#if isDirectory}}<a href="/singularity/task/{{ taskId }}/files{{ relPath }}" data-route="/task/{{ taskId }}/files{{ relPath }}">{{ shortPath }}</a>{{else}}<a href="{{ downloadLink }}" target="_blank">{{ shortPath }}</a>{{/if}}</td>
+                            <td>
+                                {{#if isDirectory}}
+                                    <a href="/singularity/task/{{ taskId }}/files{{ relPath }}" data-route="/task/{{ taskId }}/files{{ relPath }}">{{ shortPath }}</a>
+                                {{else}}
+                                    {{ shortPath }}
+                                {{/if}}
+                            </td>
                             <td data-value="{{ size }}">{{ sizeHuman }}</td>
                             <td data-value="{{ mtime }}"><span title="{{ mtime }}">{{ mtimeHuman }}</span></td>
+                            <td>
+                                {{#unless isDirectory}}<a href="{{ downloadLink }}" target="_blank">Download</a>{{/unless}}</td>
+                            </td>
                         </tr>
                     {{/eachWithFn}}
                 </tbody>
