--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -45,7 +45,7 @@
                         <th>Name</th>
                         <th>Size</th>
                         <th>Last modified</th>
-                        <th></th>
+                        <th data-sortable="false"></th>
                     </tr>
                 </thead>
                 <tbody>
