Remove extra </td>

--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -61,7 +61,7 @@
                             <td data-value="{{ size }}">{{ sizeHuman }}</td>
                             <td data-value="{{ mtime }}"><span title="{{ mtime }}">{{ mtimeHuman }}</span></td>
                             <td>
-                                {{#unless isDirectory}}<a href="{{ downloadLink }}" target="_blank">Download</a>{{/unless}}</td>
+                                {{#unless isDirectory}}<a href="{{ downloadLink }}" target="_blank">Download</a>{{/unless}}
                             </td>
                         </tr>
                     {{/eachWithFn}}
