--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -39,34 +39,7 @@
     <div class="row-fluid">
         <div class="span12">
             <p><a href="{{ taskHistory.mesosMasterLogsLink }}" target="_blank">View on Mesos Master</a></p>
-            <table class="table" data-sortable>
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Size</th>
-                        <th>Last modified</th>
-                        <th data-sortable="false"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#eachWithFn taskLogFiles}}
-                        <tr>
-                            <td>
-                                {{#if isDirectory}}
-                                    <a href="/singularity/task/{{ taskId }}/files{{ relPath }}" data-route="/task/{{ taskId }}/files{{ relPath }}">{{ shortPath }}</a>
-                                {{else}}
-                                    {{ shortPath }}
-                                {{/if}}
-                            </td>
-                            <td data-value="{{ size }}">{{ sizeHuman }}</td>
-                            <td data-value="{{ mtime }}"><span title="{{ mtime }}">{{ mtimeHuman }}</span></td>
-                            <td>
-                                {{#unless isDirectory}}<a href="{{ downloadLink }}" target="_blank">Download</a>{{/unless}}
-                            </td>
-                        </tr>
-                    {{/eachWithFn}}
-                </tbody>
-            </table>
+            {{> filesTable}}
         </div>
     </div>
     <div class="page-header">
