--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -101,7 +101,7 @@
                                 <td>{{ lastStatusHuman }}</td>
                                 <td data-value="{{ createdAt }}">{{ createdAtHuman }}</td>
                                 <td data-value="{{ updatedAt }}">{{ updatedAtHuman }}</td>
-                                <td><a href="/singularity/task/{{ id }}/files/" data-route="/task/{{ id }}">Files</a></td>
+                                <td><a href="/singularity/task/{{ id }}/files/" data-route="/task/{{ id }}/files/">Files</a></td>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
