--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -1,5 +1,5 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>{{#hardBreak request.name}}{{/hardBreak}}</h1>
+    <h1>{{#hardBreak request.name}}{{/hardBreak}} <small><a data-request-id="{{ request.id }}" class="dont-route view-object-json">JSON</a></small></h1>
     <p class="lead">{{#hardBreak request.id}}{{/hardBreak}}</p>
 </header>
 
@@ -111,13 +111,4 @@
             <div class="page-loader centered"></div>
         {{/if}}
     {{/if}}
-
-    <div class="page-header">
-        <h1>JSON</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span12">
-            <pre>{{ request.JSONString }}</pre>
-        </div>
-    </div>
 </section>
