--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -1,5 +1,5 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>{{#hardBreak taskHistory.task.name}}{{/hardBreak}}</h1>
+    <h1>{{#hardBreak taskHistory.task.name}}{{/hardBreak}} <small><a data-task-id="{{ taskHistory.task.id }}" class="dont-route view-object-json">JSON</a></small></h1>
     <p class="lead">{{#hardBreak taskHistory.task.id}}{{/hardBreak}}</p>
 </header>
 
@@ -40,14 +40,6 @@
         <div class="span12">
             <p><a href="{{ taskHistory.mesosMasterLogsLink }}" target="_blank">View on Mesos Master</a></p>
             {{> filesTable}}
-        </div>
-    </div>
-    <div class="page-header">
-        <h1>JSON</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span12">
-            <pre>{{ taskHistory.task.JSONString }}</pre>
         </div>
     </div>
 </section>
