--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -30,7 +30,7 @@ tr.filtered
 // Overrides
 
 #nav-user-name
-    cursor: default
+    cursor default
 
 .btn-navbar:hover
     background-position initial
