Improve search input styles on non search page

--- a/SingularityUI/app/styles/search.styl
+++ b/SingularityUI/app/styles/search.styl
@@ -1,7 +1,7 @@
 @import nib
 @import colors
 
-section input[type="search"][required]
+section input[type="search"][required].with-search-options
     font-size 1.75em
     height 83px
     padding 1rem
