--- a/SingularityUI/app/views/templates/search.hbs
+++ b/SingularityUI/app/views/templates/search.hbs
@@ -5,7 +5,7 @@
 <section>
     <div class="row-fluid">
         <div class="span12">
-            <input type="search" placeholder="Search requests and tasks..." required />
+            <input type="search" class="with-search-options" placeholder="Search requests and tasks..." required />
             <div class="search-options">
                 <div class="options-category-group">
                     <h4>Requests order options</h4>
