--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -30,7 +30,7 @@
                                 <td>
                                     <a data-request-id="{{ id }}" class="dont-route view-json">JSON</a>
                                     &nbsp;&nbsp;
-                                    <a data-request-id="{{ id }}" class="dont-route" data-action="remove" data-url="{{ url }}">Remove</a>
+                                    <a data-request-id="{{ id }}" class="dont-route" data-action="remove">Remove</a>
                                 </td>
                             </tr>
                         {{/eachWithFn}}
@@ -65,7 +65,7 @@
                                 <td>
                                     <a data-request-id="{{ id }}" class="dont-route view-json">JSON</a>
                                     &nbsp;&nbsp;
-                                    <a data-request-id="{{ id }}" class="dont-route" data-action="remove" data-url="{{ url }}">Remove</a>
+                                    <a data-request-id="{{ id }}" class="dont-route" data-action="remove">Remove</a>
                                 </td>
                             </tr>
                         {{/eachWithFn}}
